--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -2,6 +2,7 @@
     transition: color .1s ease, background-color .1s ease;
     margin: 0;
     box-sizing: border-box;
+    user-select: none
 }
 
 *::selection {
@@ -126,10 +127,12 @@ main.page {
 }
 
 div.page {
-    max-width: 75rem;
+    /* max-width: 75rem; */
     margin: 0 auto;
     padding: 2rem 0vw 4rem 1vw;
     display: block;
+    margin-top: 0;
+    opacity: 1;
 }
 
 div.sidebar .sidebar-item {
@@ -531,14 +534,15 @@ i#nav-6:before {
     content: "\f085";
 }
 
-div.start {
+div.btn {
     position: fixed;
     right: 1.9rem;
     bottom: 2rem;
     display: flex;
 }
 
-button#start, button#version_list_button {
+button#start,
+button#version_list_button {
     width: 3rem;
     height: 3rem;
     border: none;
@@ -559,6 +563,7 @@ button#version_list_button {
     width: 11.2rem;
     margin-right: .6rem;
 }
+
 button#start::before {
     content: "\f135";
 }
@@ -579,9 +584,89 @@ button#start::before {
 }
 
 div.sidebar {
-    box-shadow: none !important;
+    box-shadow: 0px 0px 0px #000;
     background-color: #ffffff59;
     margin-top: 44px;
     border-bottom-left-radius: 8px;
     height: calc(100vh - 55px);
 }
+
+
+
+
+
+
+
+
+
+/* 按钮动画 by艾恩小灰灰 */
+.btn-box {
+    width: 500px;
+    /* 弹性布局 */
+    display: flex;
+    /* 横向排列 */
+    flex-direction: row;
+    /* 允许换行 */
+    flex-wrap: wrap;
+    /* 平均分配宽度给每一个子元素 */
+    justify-content: space-around;
+}
+
+.btn-box button {
+    /* 相对定位 */
+    position: relative;
+    border: none;
+    background: linear-gradient(to right, #52d1c2, #1ab3a1);
+    ;
+    width: 200px;
+    height: 60px;
+    margin: 20px 0;
+    font-size: 18px;
+    color: #fff;
+    /* 字间距 */
+    letter-spacing: 3px;
+    border-radius: 30px;
+    /* 阴影 */
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    /* 这里加个溢出隐藏 */
+    overflow: hidden;
+}
+
+.btn-box button:hover {
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-box button span {
+    /* 绝对定位 */
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    /* 设置元素不对指针事件做出反应 */
+    pointer-events: none;
+    /* 执行动画 */
+    animation: animate 1s ease;
+}
+
+/* 定义动画 */
+@keyframes animate {
+    from {
+        width: 0;
+        height: 0;
+        opacity: 0.5;
+    }
+
+    to {
+        width: 400px;
+        height: 400px;
+        opacity: 0;
+    }
+}
+
+.dont_display * {
+    display: none;
+}
+
