--- a/view/index.html
+++ b/view/index.html
@@ -130,54 +130,58 @@
           <div class="card-button" onclick="expanded_card(this)"><i class="angle-down"></i></div>
         </div>
         <div class="card-body">
-          <div class="input input-text">
-            <span class="name">游戏窗口标题</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="游戏窗口标题" placeholder="默认" required>
-              <div class="underline"></div>
+          <div>
+            <div class="input input-text">
+              <span class="name">游戏窗口标题</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="游戏窗口标题" placeholder="默认" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">自定义启动器信息</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="自定义启动器信息" placeholder="默认" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">自定义启动器信息</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="自定义启动器信息" placeholder="默认" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">服务器地址</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="服务器地址" placeholder="启动游戏后可以自动进入服务器" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">服务器地址</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="服务器地址" placeholder="启动游戏后可以自动进入服务器" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-
-          <div class="input input-list" id="version_isolation">
-            <span class="name">版本隔离</span>
-            <div class="input-data input-data-list" onclick="input_list(this,'185px')">
-              <div></div>
-              <ul class="option" style="display: none;">
-                <li class="option" onclick="set_input_list(this)">各版本独立</li>
-                <li class="option" onclick="set_input_list(this)">仅隔离远古版本</li>
-                <li class="option" onclick="set_input_list(this)">仅隔离可安装 Mod 的版本</li>
-                <li class="option" onclick="set_input_list(this)">仅隔离非正式版</li>
-                <li class="option" onclick="set_input_list(this)">仅隔离远古版本、非正式版、可安装 Mod 的版本</li>
-                <li class="option" onclick="set_input_list(this)">关闭（不推荐）</li>
-              </ul>
+  
+            <div class="input input-list" id="version_isolation">
+              <span class="name">版本隔离</span>
+              <div class="input-data input-data-list" onclick="input_list(this,'185px')">
+                <div></div>
+                <ul class="option" style="display: none;">
+                  <li class="option" onclick="set_input_list(this)">各版本独立</li>
+                  <li class="option" onclick="set_input_list(this)">仅隔离远古版本</li>
+                  <li class="option" onclick="set_input_list(this)">仅隔离可安装 Mod 的版本</li>
+                  <li class="option" onclick="set_input_list(this)">仅隔离非正式版</li>
+                  <li class="option" onclick="set_input_list(this)">仅隔离远古版本、非正式版、可安装 Mod 的版本</li>
+                  <li class="option" onclick="set_input_list(this)">关闭（不推荐）</li>
+                  <div></div>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="input input-list" id="version_isolation">
-            <span class="name">进程优先级</span>
-            <div class="input-data input-data-list" onclick="input_list(this,'153px')">
-              <div></div>
-              <ul class="option" style="display: none;">
-                <li class="option" onclick="set_input_list(this)">最高</li>
-                <li class="option" onclick="set_input_list(this)">较高</li>
-                <li class="option" onclick="set_input_list(this)">中</li>
-                <li class="option" onclick="set_input_list(this)">较低</li>
-                <li class="option" onclick="set_input_list(this)">最低</li>
-              </ul>
+  
+            <div class="input input-list" id="version_isolation">
+              <span class="name">进程优先级</span>
+              <div class="input-data input-data-list" onclick="input_list(this,'153px')">
+                <div></div>
+                <ul class="option" style="display: none;">
+                  <li class="option" onclick="set_input_list(this)">最高</li>
+                  <li class="option" onclick="set_input_list(this)">较高</li>
+                  <li class="option" onclick="set_input_list(this)">中</li>
+                  <li class="option" onclick="set_input_list(this)">较低</li>
+                  <li class="option" onclick="set_input_list(this)">最低</li>
+                  <div></div>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -195,47 +199,49 @@
           </div>
           <div class="card-button" onclick="expanded_card(this)"><i class="angle-down"></i></div>
         </div>
-        <div class="card-body">
-          <div class="input input-text">
-            <span class="name">游戏参数</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="游戏参数" placeholder="默认" required>
-              <div class="underline"></div>
+        <div class="card-body" style="overflow: hidden;">
+          <div>
+            <div class="input input-text">
+              <span class="name">游戏参数</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="游戏参数" placeholder="默认" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">启动前执行</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="自定义启动器信息" placeholder="在游戏启动前执行" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">启动前执行</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="自定义启动器信息" placeholder="在游戏启动前执行" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">包装命令</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="包装命令" placeholder="会自动添加至启动命令前方" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">包装命令</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="包装命令" placeholder="会自动添加至启动命令前方" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">启动后执行</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="启动游戏后自动进入服务器" placeholder="在游戏启动后执行" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">启动后执行</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="启动游戏后自动进入服务器" placeholder="在游戏启动后执行" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">Java 虚拟机参数</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="Java 虚拟机参数" placeholder="填写以覆盖默认设置" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">Java 虚拟机参数</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="Java 虚拟机参数" placeholder="填写以覆盖默认设置" required>
+                <div class="underline"></div>
+              </div>
             </div>
-          </div>
-          <div class="input input-text">
-            <span class="name">内存永久保存区域</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="内存永久保存区域" placeholder="填写整数（单位 MB）" required>
-              <div class="underline"></div>
+            <div class="input input-text">
+              <span class="name">内存永久保存区域</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="内存永久保存区域" placeholder="填写整数（单位 MB）" required>
+                <div class="underline"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -253,12 +259,14 @@
           </div>
           <div class="card-button" onclick="expanded_card(this)"><i class="angle-down"></i></div>
         </div>
-        <div class="card-body">
-          <div class="input input-text">
-            <span class="name">本地库路径 (LWJGL)</span>
-            <div class="input-data">
-              <input type="text" id="input_a" title="本地库路径（LWJGL）" placeholder="由启动器提供，填写此选项以自定义游戏需要的本地库" required>
-              <div class="underline"></div>
+        <div class="card-body" style="overflow: hidden;">
+          <div>
+            <div class="input input-text">
+              <span class="name">本地库路径 (LWJGL)</span>
+              <div class="input-data">
+                <input type="text" id="input_a" title="本地库路径（LWJGL）" placeholder="由启动器提供，填写此选项以自定义游戏需要的本地库" required>
+                <div class="underline"></div>
+              </div>
             </div>
           </div>
         </div>
