--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -15,7 +15,7 @@
 }
 
 :hover::-webkit-scrollbar {
-    width: 8px;
+    width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -28,20 +28,21 @@
 }
 
 #win {
-    width: calc(100vw - 20px);
-    height: calc(99.8vh - 20px);
+    width: calc(100vw - 10px);
+    height: calc(99.8vh - 10px);
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0px 0px 10px #00000047;
+    box-shadow: 0px 0px 5px #00000047;
+    transition: background-color .3s ease;
     /* background-image: linear-gradient(to right, #ffffff9c 0%, #ffffffb5 100%), linear-gradient(to right, #43e97b 0%, #38f9d7 100%); */
-    /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
     /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
     /* background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
     /* background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%); */
-    /* background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%); */
-    /* background-image: linear-gradient(to top, #ebc0fd 0%, #d9ded8 100%); */
-    /* background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%); */
-    background-color: #ffffffab;
+    /* background-image: linear-gradient(135deg, #fddb92 0%, #d1fdff 100%); */
+    /* background-image: linear-gradient(135deg, #ebc0fd 0%, #d9ded8 100%); */
+    /* background-image: linear-gradient(135deg, #9890e3 0%, #b1f4cf 100%); */
+    /* background-color: #ffffffab; */
 }
 
 /* 标题栏 */
@@ -103,7 +104,7 @@ div.sidebar {
     overflow-y: auto;
     overflow-x: hidden;
     padding-top: 4rem;
-    transition: all .2s cubic-bezier(0, 0.83, 0.47, 1);
+    /* transition: all .2s cubic-bezier(0, 0.83, 0.47, 1); */
     padding: 1rem 0.5rem 0 0.5rem;
     padding-bottom: 3rem;
 }
@@ -214,7 +215,7 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .user-panel img {
@@ -351,7 +352,7 @@ div.page {
     background-color: #00000026;
 }
 
-.card-header>.card-button:active>i.angle-down {
+.card-header>.card-button:active>i {
     transform: scale(0.85, 0.85) rotate(180deg);
 }
 
@@ -369,7 +370,7 @@ div.page {
     color: #0000009c;
 }
 
-i.angle-down {
+.card-button>i {
     font-family: 'fa-pro';
     font-style: normal;
     width: 100%;
@@ -378,22 +379,21 @@ i.angle-down {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: transform 0.3s ease;
     transform: rotate(180deg);
 }
 
 .card-body {
     overflow: visible;
-    max-height: 265px;
-    transition: all .3s ease;
     padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    transition: height 0.4s cubic-bezier(0, 0.69, 0.4, 1.02);
 }
 
 .card-body>div {
-    margin: 1.65rem 2.15rem;
+    margin: 23px 33px;
 }
 
 .card-footer {
@@ -423,7 +423,7 @@ i.angle-down {
 }
 
 .not-expanded .card-body {
-    max-height: 0;
+    /* max-height: 0; */
     border-top: none;
     /* overflow: hidden; */
     /* display: flex; */
@@ -434,11 +434,11 @@ i.angle-down {
 .not-expanded .card-body>div {
 }
 
-.not-expanded .card-header>.card-button>i.angle-down {
+.not-expanded .card-header>.card-button>i {
     transform: rotate(0deg);
 }
 
-.not-expanded .card-header>.card-button:active>i.angle-down {
+.not-expanded .card-header>.card-button:active>i {
     transform: scale(0.85, 0.85) rotate(0deg);
 }
 
@@ -560,151 +560,20 @@ div.sidebar {
     background-color: #ffffff59;
     margin-top: 50px;
     border-bottom-left-radius: 8px;
-    height: calc(100vh - 71.1px);
 }
 
 .dont_display * {
     display: none;
 }
 
-div.input {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 0.4rem;
-    position: relative;
-    bottom: 0;
-}
-
-span.name {
-    font-size: 0.9rem;
-    height: 1.4em;
-    min-width: 10em;
-    margin-right: 2.4em;
-}
-
-.input-text input {
-    border: none;
-    outline: none;
-    border-bottom: 2px #000000;
-    background: none;
-    padding: 0;
-    height: 100%;
-    width: calc(100% - 16px);
-}
-
-.input-data {
-    border-radius: 4px;
-    overflow: hidden;
-    background: #ffffff;
-    outline: 1px solid #0000001c;
-    height: 30px;
-    width: 100%;
-    padding: 0 8px 2px 8px;
-    /* border-bottom: 2px solid #000000; */
-}
-
-.input-data:hover {
-    background: #00000005;
-}
-
-.input-data-list {
-    overflow: visible;
-    padding-top: 0.1em;
-    display: inline-grid;
-    flex-direction: column;
-    width: auto;
-    min-width: 16rem;
-    background: #fff;
-    align-items: center;
-    justify-items: end;
-}
-
-.input-data-list:active>div {
-    color: #00000094;
-}
-
-.input-data-list>div {
-    font-size: 0.8rem;
-    width: 15rem;
-    white-space: nowrap;
-    overflow: hidden;
-    transition: color .06s ease;
-}
-
-.input-data-list>div::after {
-    /* content: "1"; */
-    /* text-align: right; */
-    /* width: 100%; */
-}
-
-.input-list ul.option {
-    height: 2rem;
+div.choose-file-msg {
     position: absolute;
-    margin-top: 0.3rem;
-    background: #fafafa;
-    margin-right: -10px;
-    padding: 7px 10px;
-    border-radius: 7px;
-    border: 1px solid #00000036;
-    transition: all 0.2s ease;
-    overflow: hidden;
-    font-size: 0.8rem;
-    min-width: 16.3rem;
-    box-shadow: 0px 0px 6px #00000030;
-    cursor: default;
-    z-index: 10;
-}
-
-.input-list li.option {
-    list-style: none;
-    transition: all .1s ease;
-    padding: 5px 6px;
-    border-radius: 6px;
-    white-space: nowrap;
-}
-
-.input-list li.option:hover {
-    background: #00000021;
-}
-
-.input-list li.option:active {
-    
-}
-
-.input-list ul.option>div {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    top:0;
-    z-index: -1;
-}
-
-.input-text .underline {
-    background: #1a73e8;
-    margin-left: -8px;
-    height: 2px;
-    width: calc(100% + 16px);
-    transform: scale(0, 1);
-    opacity: 0;
-    border-radius: 6px;
-    transition: transform .3s ease, opacity .3s ease;
-}
-
-.input-text input:focus~.underline {
-    transform: scale(1);
-    opacity: 1;
-    transition: transform .3s ease, opacity .3s ease;
-}
-
-div.page-title {
-    font-family: 'Harmony-light';
-    font-size: 1.8rem;
-    font-weight: 600;
-    margin: 0 0 1.2rem 1rem;
-}
-
-.btn-disable {
+    width: 100%;
+    height: 100%;
     pointer-events: none;
+    background-color: #000;
+    opacity: 0;
+    z-index: 200;
+    border-radius: 8px;
+    transition: all .3s ease;
 }
