Feat(控件): 新增滑块

--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -30,6 +30,7 @@
 #win {
     width: calc(100vw - 10px);
     height: calc(99.8vh - 10px);
+    margin-left: 5px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 0px 5px #00000047;
